Moni Labs 0.17.0
* Update to GTm 7.2.0
* Fix a critical bug with Prismatic Crucible recipe registration by moving category logic to the chroma container